--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.63.2
 httplib2==0.22.0
-pandas==2.2.2
-pyinstaller
-gspread
-oauth2client
+gspread==6.1.2
+oauth2client==4.1.3
+python-dateutil==2.9.0
